--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,7 @@
     ],
     "theme_color": "#352f44",
     "background_color": "#352f44",
-    "start_url": "/",
+    "start_url": "/counter/",
     "display": "standalone",
     "orientation": "portrait"
 }
