more UI changes, changed the notification style

--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
             "type": "image/png"
           }
     ],
-    "theme_color": "#352f44",
+    "theme_color": "#dbd8e3",
     "background_color": "#352f44",
     "start_url": "/counter/",
     "display": "standalone",
